// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HtmlFragments.vue > Renders correctly > Mix of everything 1`] = `
<div></div>
<div
  class="
    box
    cow
  "
  style="background: #F00;"
>
  Content
</div>
<span>
  Text node
</span>
<p class="a">
  <strong class="
    a
    b
    c
  ">
    Text
  </strong>
</p>
`;

exports[`HtmlFragments.vue > Renders correctly > One element with children 1`] = `
<div class="box">
  <span>
    Text1
  </span>
  <span>
    Text2
  </span>
</div>
`;

exports[`HtmlFragments.vue > Renders correctly > One element without children 1`] = `<div></div>`;

exports[`HtmlFragments.vue > Renders correctly > One text node 1`] = `
<span>
  Some Text
</span>
`;

exports[`HtmlFragments.vue > Renders correctly > Partial markup > New wrapper element on previous line 1`] = `
<d div="">
  Text
</d>
`;

exports[`HtmlFragments.vue > Renders correctly > Partial markup > New wrapper element on previous line 2`] = `
<div>
  <div>
    Text
  </div>
</div>
`;

exports[`HtmlFragments.vue > Renders correctly > Partial markup > Type out new wrapper element 1`] = `
<div>
  Text
</div>
`;

exports[`HtmlFragments.vue > Renders correctly > Partial markup > Type out new wrapper element 2`] = `
<div>
  <div>
    Text
  </div>
</div>
`;

exports[`HtmlFragments.vue > Renders correctly > Renders nothing 1`] = ``;

exports[`HtmlFragments.vue > Renders correctly > Two root elements 1`] = `
<div>
  Text
</div>
<p>
  Paragraph
</p>
`;
